--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,13 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 .container-fluid {
-    background-image: url("http://www.powerpointhintergrund.com/uploads/space-background-6.jpeg");
-    color: white;
+    background-image: url(../img/horoscopebg.jpg);
+    color: black;
     height: 1000px;
 }
 .container-fluid h1 {
     font-size: 60px;
-    font-weight: 300;
+    font-weight: 500;
     padding: 10px;
 }
 
@@ -20,7 +20,7 @@ body {
 
 .part1  h5 {
     font-size: 26px;
-    font-weight: 300;
+    font-weight: 500;
     padding: 15px;
 }
 .part1 input {
@@ -33,12 +33,12 @@ body {
 }
 .part1 h6 {
     font-size: 20px;
-    font-weight: 500;
+    font-weight: 600;
     padding: 10px;
 }
 .part1 h6 > span {
     font-size: 16px;
-    font-weight: 200;
+    font-weight: 400;
 }
 
 /* Part2 - JavaScript Input Form User */
@@ -49,12 +49,12 @@ body {
 }
 .part2 h4 {
     font-size: 40px;
-    font-weight: 300;
+    font-weight: 500;
     padding: 25px;
 }
 .part2 p {
     font-size: 20px;
-    font-weight: 200;
+    font-weight: 400;
     padding: 20px;
 }
 
@@ -63,18 +63,17 @@ body {
 @media (max-width: 1175px) {
     .part1 h6 {
         font-size: 16px;
-        font-weight: 500;
+        font-weight: 600;
         padding: 5px;
     }
     .part1 h6 > span {
         font-size: 14px;
-        font-weight: 200;
+        font-weight: 400;
     }
 }
 @media (max-width: 1080px) {
     .container-fluid {
-        background-image: url("http://www.powerpointhintergrund.com/uploads/space-background-6.jpeg");
-        color: white;
+        color: black;
         height: 1200px;
     }
     .part2 img {
@@ -83,19 +82,18 @@ body {
     }
     .part2 h4 {
         font-size: 30px;
-        font-weight: 300;
+        font-weight: 500;
         padding: 25px;
     }
     .part2 p {
         font-size: 18px;
-        font-weight: 200;
+        font-weight: 400;
         padding: 20px;
     }
 }
 @media (max-width: 768px) {
     .container-fluid {
-        background-image: url("http://www.powerpointhintergrund.com/uploads/space-background-6.jpeg");
-        color: white;
+        color: black;
         height: 1400px;
     }
     .part2 img {
@@ -106,8 +104,7 @@ body {
 }
 @media (max-width: 575px) {
     .container-fluid {
-        background-image: url("http://www.powerpointhintergrund.com/uploads/space-background-6.jpeg");
-        color: white;
+        color: black;
         height: 1900px;
     }
     .part2 img {
